css/strony-io.webflow.css
:root {
  --text-color--text-primary: var(--base-color-neutral--black);
  --background-color--bg-primary: var(--base-color-neutral--white);
  --text-color--text-alt: var(--base-color-neutral--white);
  --text-color--text-secondary: var(--base-color-neutral--neutral-dark);
  --background-color--background-success\<deleted\|variable-879e2a57-3170-38fd-0ae7-d0e890873ab2\>: var(--base-color-system--success);
  --text-color--text-success\<deleted\|variable-17518f72-fb93-45b5-ad9e-fdd3f2b1833a\>: var(--base-color-system--success-green-dark\<deleted\|variable-70ae3530-1c64-4d15-f2af-205678316683\>);
  --border-color--border-primary: var(--base-color-neutral--neutral);
  --background-color--bg-alt: var(--base-color-neutral--black);
  --background-color--bg-secondary: var(--base-color-neutral--neutral-lighter);
  --link-color--link-primary: var(--base-color-brand--lemon);
  --background-color--bg-tertiary: var(--base-color-brand--violet-light);
  --background-color--background-error\<deleted\|variable-89aecd3e-2fe8-312c-65a2-e3e7c57d326c\>: var(--base-color-system--error);
  --text-color--text-error\<deleted\|variable-4a51c5d2-820c-a0d9-b49e-0e5d273c964f\>: var(--base-color-system--error-red-dark\<deleted\|variable-f7a8b234-8033-a5d6-4d85-0326277c2bf8\>);
  --background-color--bg-btn: var(--base-color-brand--lemon);
  --background-color--bg-btn-hover: var(--base-color-brand--lemon-dark);
  --base-color-neutral--neutral-lighter: #fafafa;
  --base-color-neutral--white: #fff;
  --background-color--background-warning\<deleted\|variable-0aa1a7ce-e851-b6b5-66db-1a1a96e8e04b\>: var(--base-color-system--warning);
  --text-color--text-warning\<deleted\|variable-825aa1d8-b093-0b89-37c5-87d980df10f5\>: var(--base-color-system--warning-yellow-dark\<deleted\|variable-296491a7-483e-1229-36b5-e13808cc9004\>);
  --link-color--link-hover: var(--base-color-brand--violet-dark);
  --base-color-neutral--black: #000;
  --background-color--bg-alt-hover: var(--base-color-neutral--black-light);
  --base-color-neutral--neutral-light: #eee;
  --base-color-brand--violet: #6927da;
  --base-color-brand--lemon: #cf0;
  --base-color-brand--lemon-dark: #beee00;
  --background-color--bg-btn-wizytowki: var(--base-color-brand--blue);
  --background-color--bg-btn-wizytowki-hover: var(--base-color-brand--blue-dark);
  --background-color--bg-btn-brandingi: var(--base-color-brand--orange);
  --background-color--bg-btn-brandingi-hover: var(--base-color-brand--orange-dark);
  --base-color-brand--violet-light: #e3e8fc;
  --text-color--text-primary-hover: var(--base-color-neutral--neutral);
  --base-color-brand--violet-dark: #491c96;
  --base-color-brand--blue: #007aff;
  --base-color-brand--blue-dark: #0063cc;
  --base-color-brand--orange: #ff4405;
  --base-color-brand--orange-dark: #cc3704;
  --base-color-neutral--black-light: #2a2a2a;
  --base-color-neutral--neutral: grey;
  --base-color-neutral--neutral-dark: #5f5f5f;
  --base-color-system--success: #3dd68c;
  --base-color-system--warning: #f7c948;
  --base-color-system--error: #ef4e4e;
  --base-color-system--focus: var(--base-color-brand--violet);
  --link-color--link-secondary: var(--base-color-neutral--black);
  --link-color--link-alt: var(--base-color-neutral--white);
  --base-color-system--success-green-dark\<deleted\|variable-70ae3530-1c64-4d15-f2af-205678316683\>: #114e0b;
  --base-color-system--error-red-dark\<deleted\|variable-f7a8b234-8033-a5d6-4d85-0326277c2bf8\>: #3b0b0b;
  --base-color-system--warning-yellow-dark\<deleted\|variable-296491a7-483e-1229-36b5-e13808cc9004\>: #5e5515;
}

.w-checkbox {
  margin-bottom: 5px;
  padding-left: 20px;
  display: block;
}

.w-checkbox:before {
  content: " ";
  grid-area: 1 / 1 / 2 / 2;
  display: table;
}

.w-checkbox:after {
  content: " ";
  clear: both;
  grid-area: 1 / 1 / 2 / 2;
  display: table;
}

.w-checkbox-input {
  float: left;
  margin: 4px 0 0 -20px;
  line-height: normal;
}

.w-checkbox-input--inputType-custom {
  border: 1px solid #ccc;
  border-radius: 2px;
  width: 12px;
  height: 12px;
}

.w-checkbox-input--inputType-custom.w--redirected-checked {
  background-color: #3898ec;
  background-image: url('https://d3e54v103j8qbb.cloudfront.net/static/custom-checkbox-checkmark.589d534424.svg');
  background-position: 50%;
  background-repeat: no-repeat;
  background-size: cover;
  border-color: #3898ec;
}

.w-checkbox-input--inputType-custom.w--redirected-focus {
  box-shadow: 0 0 3px 1px #3898ec;
}

.w-form-formradioinput--inputType-custom {
  border: 1px solid #ccc;
  border-radius: 50%;
  width: 12px;
  height: 12px;
}

.w-form-formradioinput--inputType-custom.w--redirected-focus {
  box-shadow: 0 0 3px 1px #3898ec;
}

.w-form-formradioinput--inputType-custom.w--redirected-checked {
  border-width: 4px;
  border-color: #3898ec;
}

body {
  color: var(--text-color--text-primary);
  font-family: Geist, sans-serif;
  font-size: 1rem;
  line-height: 1.5;
}

h1 {
  margin-top: 0;
  margin-bottom: 0;
  font-family: Geist, sans-serif;
  font-size: 3rem;
  font-weight: 600;
  line-height: 3rem;
}

h2 {
  color: var(--text-color--text-primary);
  margin-top: 0;
  margin-bottom: 0;
  font-size: 3rem;
  font-weight: 600;
  line-height: 3rem;
}

h3 {
  color: var(--text-color--text-primary);
  margin-top: 0;
  margin-bottom: 0;
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 1.75;
}

h4 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 1.4;
}

h5 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 1.25rem;
  font-weight: 700;
  line-height: 1.5;
}

h6 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5;
}

p {
  margin-bottom: 0;
  font-family: Geist Mono, sans-serif;
}

a {
  color: var(--text-color--text-primary);
  font-family: Geist Mono, sans-serif;
  text-decoration: none;
}

ul, ol {
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 1.5rem;
}

li {
  margin-bottom: .25rem;
}
/* ... */

